@@ -9,6 +9,9 @@
 		- trying to fix "`asm' operand has impossible constraints"
 		  under g++ 4 when compiling 0-argument syscalls for ARM
 
+		include/innocent-pear/orly.h :
+		- wut(...) now purposely inhibits alias analysis
+
 2016-08-20	So there is bfd_copy_private_header_data(...), and then
 		there is bfd_copy_private_bfd_data(...).  ¯\_(ツ)_/¯
 
